horizontal scrolling fix
added overflow-x hidden to html element to fix horizontal scrolling on mobile

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,12 @@
 
+html {
+    overflow-x: hidden; 
+}
+
 .navbar {
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  min-height: 40px !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    min-height: 40px !important;
 }
 
 .navbar-brand {
@@ -10,14 +14,14 @@
 }
 
 .text-center {
-  display: inline-block;
+    display: inline-block;
 }
 
 body {
     background-color: #28292B;
     text-align: center;
     max-width: 100%;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 } 
 
 .game-container {
